# StandartCode_semantic

./: _handlers.py  csv_reader.ipynb  dialogs.py  handlers.py  main.py  models.py  pyproject.toml  relation_concept.ipynb  relations_graph.html  ui_main.py  ui_mainwindow.py  vizualiz_label_studio.ipynb
handlers/: __init__.py  expression_handler.py  object_handler.py  relation_handler.py  set_handler.py  tree_handler.py
label_studio/: SP_477.txt  project-2-at-2025-03-31-17-29-15d9f73c.json  relations_graph.html  vizualiz_label_studio.ipynb
searcher/: csv_embedding_searcher.py
searcher/data/: 06_Com.csv  06_Com_cached.pkl  06_Com_subclass2.csv  06_Com_subclass2_cached.pkl  3_ОКС_cached.pkl
