[project]
name = "pyside-semantic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "label-studio>=1.16.0",
    "pandas>=2.2.3",
    "pyside6>=6.8.2.1",
    "pyvis>=0.3.2",
    "sentence-transformers>=3.4.1",
]
